--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ button:focus-visible {
   /* margin: 0 auto;  */
   /* padding: 2rem; */
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   text-align: center;
 }
